--- a/src/WebSite/Pages/_Layout.cshtml
+++ b/src/WebSite/Pages/_Layout.cshtml
@@ -17,6 +17,9 @@
     </environment>
 </head>
 <body>
+  
+  <h1>Microsoft</h1>
+  
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
