Make a POST request
Finally got it to work. Seems that when you use Razor Pages, it doesn't use POST normally, the parameters are sent on  the uri as a query string (!). The most common case use with a controller, so I've rewritten things to use a Controller with POST.

--- a/src/WebSite/Views/ToDo/Create.cshtml
+++ b/src/WebSite/Views/ToDo/Create.cshtml
@@ -1,11 +1,10 @@
-﻿@page
-@model CreateToDoItemViewModel
+﻿@model CreateViewModel
 @{
     ViewData["Title"] = "Create To Do";
 }
 <h2>@ViewData["Title"]</h2>
 
-<form asp-action="POST">
+<form asp-action="Create" asp-antiforgery="true">
   
   <label asp-for="@Model.Item.Title"></label>
   <input asp-for="@Model.Item.Title" type="text">
