--- a/src/WebSite/Views/ToDo/ToDos.cshtml
+++ b/src/WebSite/Views/ToDo/ToDos.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "ToDo List";
 }
 <!-- <h2>@ViewData["Title"]</h2> -->
-<ul id="todolis">
+<ul id="todolist">
   @foreach(var item in Model.ToDoItems) {
     <li>@item.Title</li>
   }
