--- a/src/WebSite/Views/ToDo/Edit.cshtml
+++ b/src/WebSite/Views/ToDo/Edit.cshtml
@@ -9,19 +9,41 @@
 <h4>EditViewModel</h4>
 <hr />
 <div class="row">
-  <div class="col-md-4">
-    <form asp-action="Edit" asp-anti-forgery="true">
-      <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-      <input asp-for="@Model.Item" type="hidden" />
-      <label asp-for="@Model.Item.Title"></label>
-      <input asp-for="@Model.Item.Title" type="text">
-      <label asp-for="@Model.Item.Description"></label>
-      <input asp-for="@Model.Item.Description" type="text">
-      <div class="form-group">
-        <input type="submit" value="Save" class="btn btn-default" />
-      </div>
-    </form>
-  </div>
+    <div class="col-md-4">
+        <form asp-action="Edit">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" />
+                <span asp-validation-for="Id" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Title" class="control-label"></label>
+                <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="Completed" /> @Html.DisplayNameFor(model => model.Completed)
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="DeadLine" class="control-label"></label>
+                <input asp-for="DeadLine" class="form-control" />
+                <span asp-validation-for="DeadLine" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
+        </form>
+    </div>
 </div>
 
 <div>
