Add 'OldFashionedTest' for blog post

--- a/src/WebSite/Views/Shared/_Layout.cshtml
+++ b/src/WebSite/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 </head>
 <body>
   
-  <h1 id="company">Microsoft</h1>
+  <h1 id="company">U2U Training</h1>
   
     <!-- <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
